Thu Oct 13 17:23:42 1994  Theodore Y. Ts'o  (tytso@maytag)

	* configure.in: Add ISODE_DEFS

Fri Oct  7 14:18:44 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add test for unistd.h
	* fcc_maybe.c: Use POSIX_FILE_LOCKS if _POSIX_VERSION is defined.

Fri Sep 30 21:54:20 1994  Theodore Y. Ts'o  (tytso@dcl)

	* fcc_defops.c (krb5_cc_file_ops):
	  fcc_ops.c (krb5_fcc_ops): Add placeholder for magic number

Thu Sep 22 21:37:15 1994  Theodore Y. Ts'o  (tytso@dcl)

	* fcc_destry.c (krb5_fcc_destroy): Make sure memory associated
		with the credentials cache is freed after it is destroyed.

Thu Aug 18 16:33:33 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* fcc_retrv.c (srvname_match): Fix bug in srvname_match where so
	that the server realm is really ignored in the compare, like it's
	supposed to be.

Mon Jun 20 19:36:19 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* fcc.h: #include <krb5/osconf.h> so that build works using imake.

